--- a/like_html.css
+++ b/like_html.css
@@ -29,7 +29,7 @@ body {
 ul{
     list-style-type: none;
     margin: 0px;
-    padding: 0px;
+    padding: 4px;
     overflow: auto;
     background-color: rgb(244, 236, 240);
     border: 1px solid rgb(234, 229, 229);
@@ -53,7 +53,7 @@ li a:hover:not(.active){
 
 .container {   
     width: 100%;
-    background-color: white;
+    background-color: rgb(233, 233, 233);
     margin:0 auto;
 }
 
@@ -84,7 +84,7 @@ li a:hover:not(.active){
     line-height: 180%;
 }
    
-.content1{
+.content{
     width: 100%;
     background-color: white;
     padding: 25px;
