--- a/aboutme_html.css
+++ b/aboutme_html.css
@@ -11,6 +11,7 @@ body {
   
 
 .header {
+    width: 100%;
   padding: 30px;
   text-align: left;
   background: rgb(235, 222, 235);
@@ -19,6 +20,7 @@ body {
 }
   
 .nav {
+    width: 100%;
     overflow: hidden;
     background-color: rgb(236, 210, 243);
     position: sticky;
@@ -26,7 +28,7 @@ body {
     top: 0;
 }
 
-ul{
+#ul{
     list-style-type: none;
     margin: 0px;
     padding: 0px;
@@ -52,48 +54,68 @@ li a:hover:not(.active){
 }
 
 .container {   
-    width: 100%;
     background-color: white;
     margin:0 auto;
 }
 
-.photo-wrapper{
+.img-wrapper{
     text-align: center;
     margin-left: 23%;
     margin-right: 23%;
 }
+
+#myimg{
+    margin-top: 3px;
+    width: 250px;
+    height: 250px;
+    float: left;
+    border-radius: 50%;
+}
+
   
 .container img{
-    width: 350px;
-    height: 350px;
+
+    width: 80px;
+    height: 30px;
     float: left;
     vertical-align: bottom;
-    /* 이미지 오른쪽에 여백 넣는거*/
-    margin-right: 35px;
+    margin-right: 90px;
+    border-radius: 1%; 
 }
   
 .container h2{
     padding-bottom: 23px;
     font-size: xx-large;
     position: top; 
-    border-bottom: solid;
-    border-width: 1px;
-    margin-left: 385px
+    /*border-bottom: solid;
+    border-width: 1px; */
+    margin-right: 385px 
 }
   
   
-.container p{
+p{
     font-size: 20px;
     line-height: 180%;
 }
    
-.content1{
+.content{
     width: 100%;
     background-color: white;
     padding: 25px;
     float: left;
     border-bottom: solid;
     border-width: 1px;
+}
+
+.table{
+    width:fit-content; text-align:center;
+}
+.table tr{                            /*<tr>태그는 테이블에서 열을 구분해 줍니다.*/
+    background-color:white
+}
+
+td, th{
+    border : 1px solid black; border-collapse : collapse;
 }
 
 .footer{
@@ -106,17 +128,18 @@ li a:hover:not(.active){
 
 .img-wrapper{
     text-align: center;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-right: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .footer img{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     float: right;
     text-align: center;
-    margin-right: 10px;
+    margin-top: 20px;
+    margin-right: 2px;
     border-radius: 50%; /* 그림을 둥글게*/
     ;
  }
@@ -124,4 +147,6 @@ li a:hover:not(.active){
 .footertext{
     font-size: 15px;
     padding: 10px;
+    width: 100%;
+    text-align: center;
 }
