--- a/like_html.css
+++ b/like_html.css
@@ -70,6 +70,7 @@ li a:hover:not(.active){
     float: left;
     text-align: center;
     margin-left: 35px;            /* 이미지 왼쪽에 여백 넣는거*/
+    border-radius: 2%;            /* 둥글게 */ 
 }
   
 .container h2{
